# boardlaw

./: .buildinfo  .gitignore  LICENSE  README.md  bug.py  genindex.html  index.html  logs.txt  main.ipynb  objects.inv  pytest.ini  readme.md  ref  requirements.txt  search.html  searchindex.js  setup.py  test.py
.doctrees/: environment.pickle  index.doctree
activelo/: __init__.py  expectations.py  plot.py  setup.py  solvers.py
analysis/: data.py  inflation.py  overleaf.py  paper.py  plot.py  talk.py  transitive.py
boardlaw/: __init__.py  analysis.py  attn.py  backup.py  buffering.py  cuda.py  elos.py  evaluators.py  games.py  grid.py  heads.py  league.py  leagues.py  learning.py  main.py  mohex.py  multimult.py  multinet.py  nash.py  networks.py  noisescales.py  plateau.py  sql.py  storage.py  validation.py  vast.py
cloud/: backup.py  gcp.py  main.py  vast.py
cublas-example/: .gitignore  gemm.cpp
docker/: Dockerfile  boardlaw_rsa.pub  cloudbuild.yaml  dev.sh  rsyncd.conf  sshd_config
docs/: conf.py  developers.rst  index.rst  setup.rst
examples/: solvers.py
experiments/: architecture.py  attn.py  fastcycles.py  gradnoise.py  mctselo.py  plateau.py  talk.py
experiments/gemm/example/: CMakeLists.txt  build.sh  gemm.cpp  makefile
grid/: __init__.py  asymdata.py  aws.py  bee.py  data.py  elos.py  eval.py  gcp.py  interface.py  main.py  models.py  nodes.py  plot.py  plots.py  refine.py  sql.py
jittens/: __init__.py  jobs.py  local.py  machines.py  manage.py  ssh.py  state.py  submit.py  tests.py
kittens/: __init__.py  local.py  machines.py  manage.py  (+4 more)
(+258 files in other folders)
